edit res view complete

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    margin-bottom: 10px;
 }
 
 .main_header h1 h2 {
