--- a/src/components/Reservation/Reservation.css
+++ b/src/components/Reservation/Reservation.css
@@ -7,10 +7,6 @@
     grid-template-columns: 100px;
 }
 
-.fa_bell {
-    margin: 0 1rem;
-}
-
 .res_name {
     grid-column: 1;
     justify-self: start;
@@ -29,4 +25,8 @@
 .fa_icons {
     grid-column: 4;
     justify-self: flex-end;
+}
+
+.waiting {
+    background-color: lightblue;
 }
