--- a/src/components/EditRes/EditRes.css
+++ b/src/components/EditRes/EditRes.css
@@ -1,6 +1,70 @@
-.editRes_form input {
-    width: 200px;
+.editRes_view {
+    background-color: lightgray;
+    margin: 5px;
     padding: 10px;
+    list-style: none;
+    display: grid;
+    grid-template: 50% / 50%;
+}
+
+.editRes_form {
+    grid-column: 1;
+}
+
+.editRes_form input {
+    padding: 10px;
+    width: -webkit-fill-available;
+    margin: 5px;
     border: 0;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
+}
+
+.editRes_buttons {
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    display: grid;
+    grid-template: auto;
+}
+
+.fa_notify {
+    grid-row: 3;
+    grid-column: 1;
+    justify-self: center;
+    align-self: center;
+    font-size: 1.5em;
+}
+
+.fa_closeWindow {
+    grid-row: 1;
+    grid-column: 2;
+    justify-self: flex-end;
+    align-self: start;
+}
+
+.fa_checkOff {
+    grid-row: 3;
+    grid-column: 2;
+    justify-self: center;
+    align-self: center;
+    font-size: 1.5em;
+}
+
+.editRes_view button {
+    border: 0;
+    border-radius: 4px;
+    font-size: large;
+    margin: 0;
+    justify-self: center;
+    align-self: center;
+    padding: 15px;
+}
+
+.editRes_waitState {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.editRes_noShow {
+    grid-row: 2;
+    grid-column: 1;
 }
