--- a/src/components/EditRes/EditRes.css
+++ b/src/components/EditRes/EditRes.css
@@ -55,17 +55,25 @@
     font-size: large;
     margin: 0;
     justify-self: center;
-    align-self: center;
     padding: 15px;
     
 }
 
 .editRes_waitState {
-    grid-row: 2;
-    grid-column: 2;
+    grid-row: 1;
+    grid-column: 1/ span 2;
+    width: 95%;
+    align-self: end;
 }
 
 .editRes_noShow {
     grid-row: 2;
     grid-column: 1;
+    align-self: center;
+}
+
+.editRes_cancel {
+    grid-row: 2;
+    grid-column: 2;
+    align-self: center;
 }
