--- a/src/routes/LoginPage/LoginPage.css
+++ b/src/routes/LoginPage/LoginPage.css
@@ -38,9 +38,11 @@ button {
 
 footer {
     background: darkgray;
-    position: fixed;
     width: 100%;
-    bottom: 0;
     padding: 50px;
     text-align: center;
+}
+
+.demo_info {
+    font-style: italic;
 }
