--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: 33%;
     z-index: 5;
+    box-shadow: 0px 2px 20px 0px #101319;
 }
 
 .main_header h1 {
@@ -24,7 +25,7 @@
 }
 
 .header_menu {
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 81px;
     padding: 1rem;
