--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background:
       linear-gradient(#414562, #292B3D) no-repeat,
-      linear-gradient(#292B3D, #414562 );
+      linear-gradient(#292B3D, #414562 ) no-repeat;
 }
 
 code {
