--- a/src/routes/ReservationPage/ReservationPage.css
+++ b/src/routes/ReservationPage/ReservationPage.css
@@ -1,5 +1,5 @@
 .reservations {
-    grid-row: 2;
+    grid-row: 1;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -7,10 +7,14 @@
     margin-top: 10px;
 }
 
+.page_height {
+    height: 100vh;
+}
+
 @media only screen and (min-width: 1000px) {
     .reservations {
         display: block;
-        place-self: center;
+        justify-self: center;
         margin-top: 85px;
     }
 
@@ -23,5 +27,14 @@
 @media only screen and (min-width: 1500px) {
     .reservations {
         width: 800px;
+    }
+}
+
+@media only screen and (max-height: 850px) {
+    .page_height {
+        height: auto;
+    }
+    .short_list {
+        height: 100vh;
     }
 }
