--- a/src/components/SmallResInfo/SmallResInfo.css
+++ b/src/components/SmallResInfo/SmallResInfo.css
@@ -1,10 +1,9 @@
-.res_block {
-    margin: 5px;
+.small_res_info {
     padding: 15px;
     list-style: none;
     display: grid;
     grid-template-columns: 100px;
-    box-shadow: 8px 12px 25px 0px #101218;
+    width: inherit
 }
 
 .res_name {
