--- a/src/components/TimeBlock/TimeBlock.css
+++ b/src/components/TimeBlock/TimeBlock.css
@@ -16,6 +16,13 @@
     padding: 10px;
 }
 
+
+@media only screen and (min-width: 1000px) {
+    .timeBlock_container {
+        margin: 20px;
+    }
+}
+
 @media only screen and (min-width: 1500px) {
     .timeBlock_container {
         max-width: 1000px;
