styled login page

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ code {
   background-color: #626E93;
 }
 
+.dark_blue_gray_font {
+  color: #626E93;
+}
+
 .rich_black_font {
   color: #101218;
 }
