added animation with react spring

--- a/src/components/AddRes/AddRes.css
+++ b/src/components/AddRes/AddRes.css
@@ -21,6 +21,11 @@
     background-color: #F4F1DE;
 }
 
+.opened_form {
+    color: #3D405B;
+    background-color: #F4F1DE;
+}
+
 .addRes_button:focus {
     color: #3D405B;
     background-color: #F4F1DE;
