--- a/src/components/EditRes/EditRes.css
+++ b/src/components/EditRes/EditRes.css
@@ -2,7 +2,8 @@
     padding: 10px;
     list-style: none;
     display: grid;
-    grid-template: 50% / 50%;
+    grid-template-columns: 50%;
+    width: 400px;
 }
 
 .editRes_form {
@@ -27,37 +28,25 @@
 
 .editRes_buttons {
     grid-column: 2;
-    grid-row: 1 / span 2;
     display: grid;
-    grid-template: auto;
+    grid-template-rows: auto;
 }
 
 .editRes_notify {
     grid-row: 4;
-    grid-column: 1 / span 2;
     justify-self: center;
     align-self: center;
     font-size: 1.5em;
-    width: 80%;
-}
-
-.fa_closeWindow {
-    grid-row: 1;
-    grid-column: 2;
-    justify-self: flex-end;
-    align-self: start;
 }
 
 .editRes_checkOff {
     grid-row: 5;
-    grid-column: 1 / span 2;
     justify-self: center;
     align-self: center;
     font-size: 1.5em;
-    width: 80%;
 }
 
-.editRes_view button {
+.editRes_button {
     border: 0;
     font-size: large;
     margin: 0 5px;
@@ -65,6 +54,7 @@
     padding: 10px;
     background-color: #ced2de;
     box-shadow: 0px 0px 15px rgb(16 18 24 / .4);
+    width: -webkit-fill-available;
 }
 
 .editRes_button:hover {
@@ -77,8 +67,6 @@
 
 .editRes_waitState {
     grid-row: 1;
-    grid-column: 1/ span 2;
-    width: 80%;
     align-self: end;
     justify-self: center;
     align-self: center;
@@ -86,29 +74,38 @@
 
 .editRes_noShow {
     grid-row: 2;
-    grid-column: 1 / span 2;
     align-self: center;
-    width: 80%;
 }
 
 .editRes_cancel {
     grid-row: 3;
-    grid-column: 1 / span 2;
     align-self: center;
-    width: 80%;
 }
 
 @media only screen and (max-width: 500px) {
     .editRes_view {
         height: 625px;
+        width: auto;
+        grid-template-rows: auto;
     }
     .editRes_form {
+        grid-row: 1;
         grid-column: 1 / span 2;
-        grid-row: 2;
         height: auto;
+        align-self: start;
     }
     .editRes_buttons {
+        grid-row: 2;
         grid-column: 1 / span 2;
-        grid-row: 1;
+    }
+    .editRes_button {
+        grid-column: 1 / span 2;
+        margin: 10px;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    .editRes_view {
+        width: 650px;
     }
 }
