--- a/src/components/ListHeader/ListHeader.css
+++ b/src/components/ListHeader/ListHeader.css
@@ -2,8 +2,14 @@
     width: 500px;
     display: flex;
     justify-content: space-between;
-    margin: 0 10px;
+    margin: 0 20px;
     font-weight: 500;
     font-style: italic;
     z-index: 1;
+}
+
+@media only screen and (min-width: 1500px) {
+    .listHeader_container {
+        width: 760px;
+    }
 }
