--- a/src/components/SmallResInfo/SmallResInfo.css
+++ b/src/components/SmallResInfo/SmallResInfo.css
@@ -3,7 +3,7 @@
     list-style: none;
     display: grid;
     grid-template-columns: 100px;
-    width: inherit
+    width: inherit;
 }
 
 .res_name {
