--- a/src/routes/LoginPage/LoginPage.css
+++ b/src/routes/LoginPage/LoginPage.css
@@ -65,6 +65,10 @@ footer {
     text-align: center;
 }
 
+footer p {
+    line-height: 35px;
+}
+
 .demo_info {
     font-style: italic;
     margin-top: 100px;
