--- a/src/components/DailyStats/DailyStats.css
+++ b/src/components/DailyStats/DailyStats.css
@@ -2,7 +2,7 @@
     bottom: 0;
     position: fixed;
     background-color: #181A25;
-    width: 100%;
+    width: 100vw;
     height: 120px;
     display: grid;
     grid-gap: 1rem;
