--- a/src/components/EditRes/EditRes.css
+++ b/src/components/EditRes/EditRes.css
@@ -12,7 +12,7 @@
 
 .res_form input {
     padding: 10px;
-    width: -webkit-fill-available;
+    width: 100%;
     margin: 7px;
     border: 0;
     box-shadow: 0px 0px 15px rgb(16 18 24 / .4);
@@ -21,7 +21,7 @@
 
 .res_form button {
     padding: 10px;
-    width: -webkit-fill-available;
+    width: 100%;
     border: 0;
     box-shadow: 0px 0px 15px rgb(16 18 24 / .4);
 }
@@ -54,7 +54,7 @@
     padding: 10px;
     background-color: #ced2de;
     box-shadow: 0px 0px 15px rgb(16 18 24 / .4);
-    width: -webkit-fill-available;
+    width: 100%;
 }
 
 .editRes_button:hover {
