--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,6 +22,8 @@
     grid-column: 3;
     justify-self: flex-end;
     align-self: center;
+    width: auto;
+    height: 40px;
 }
 
 .header_menu {
