--- a/src/routes/ReservationPage/ReservationPage.css
+++ b/src/routes/ReservationPage/ReservationPage.css
@@ -11,6 +11,12 @@
     height: 100vh;
 }
 
+.empty_list {
+    text-align: center;
+    font-size: 20px;
+    margin: 50px;
+}
+
 @media only screen and (min-width: 1000px) {
     .reservations {
         display: block;
